[package]
name = "krust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
ssh2 = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1.5"
rpassword = "7.0"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
